Adopt libkscreen to get information of the screens

Qt subsystem has deficiencies on their approximation to multiple
screens. [1]
This patch adopts libkscreen to figure out screen additions and primary
modifications.
I'm not merging to master yet as I'm experiencing some issues but it's
already far more comfortable to work with than QGuiApplication::screens().

[1] https://bugreports.qt-project.org/browse/QTBUG-38404

CCMAIL: plasma-devel@kde.org